--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "music",
   "description": "This Is A Music Application On Heroku.",
-  "repository": "https://github.com/ashraf-revo/mredithour",
+  "repository": "https://github.com/ashraf-revo/music",
   "image": "heroku/java",
   "addons": [ "heroku-postgresql" ]
 }
