--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.resources.cache-period=53085600
 logging.file=${java.io.tmpdir}${file.separator}log${file.separator}log.text
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
