--- a/manifest.yml
+++ b/manifest.yml
@@ -6,3 +6,7 @@ applications:
   host: musik
   buildpack: java_buildpack
   path: target/music-0.0.1-SNAPSHOT.jar
+  services:
+  - MySqlDbmusic
+  env:
+    SPRING_PROFILES_ACTIVE: pivotal
