--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ org.revo.app_env.users[0].info=this is sample info about me you are welcome
 org.revo.app_env.users[0].locked=true
 org.revo.app_env.users[0].type=111
 org.revo.app_env.key=org.revo
+org.revo.app_env.url=http://localhost:8080
 org.revo.app_env.cloudinary.name=dmmcfa9c0
 org.revo.app_env.cloudinary.key=553119935255391
 org.revo.app_env.cloudinary.secret=pkKIFJyAhX5xmQWVadko4VaCDi4
@@ -17,9 +18,8 @@ spring.http.multipart.max-file-size=15MB
 management.security.roles=ADMIN
 spring.resources.cache-period=53085600
 logging.file=${java.io.tmpdir}${file.separator}log${file.separator}log.text
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/music?user=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
@@ -32,3 +32,6 @@ spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 info.application.name=music
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=4
