--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 org.revo.app_env.url=https://revomusic.herokuapp.com
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=20
