--- a/src/main/resources/application-pivotal.properties
+++ b/src/main/resources/application-pivotal.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=${cloud.services.MySqlDbmusic.connection.jdbcUrl:jdbc:mysql://localhost:3306/music?user=root}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 org.revo.app_env.url=${vcap.application.uris[0]}
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.maximum-pool-size=4
