solving  spring security thread

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,5 +8,6 @@ applications:
   path: target/music-0.0.1-SNAPSHOT.jar
   services:
   - MySqlDbmusic
+  - NewRelicmusic
   env:
     SPRING_PROFILES_ACTIVE: pivotal
