--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.http.multipart.max-file-size=15MB
 management.security.roles=ADMIN
 spring.resources.cache-period=53085600
 logging.file=${java.io.tmpdir}${file.separator}log${file.separator}log.text
-spring.datasource.url=jdbc:mysql://localhost:3306/music?user=root
+spring.datasource.url=jdbc:mysql://localhost:3306/music?user=root&createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
