add hibernate search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,6 @@ management.security.roles=ADMIN
 spring.resources.cache-period=53085600
 logging.file=${java.io.tmpdir}${file.separator}log${file.separator}log.text
 spring.datasource.url=jdbc:mysql://localhost:3306/music?user=root&createDatabaseIfNotExist=true
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.mail.host=smtp.gmail.com
@@ -33,3 +32,5 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 info.application.name=music
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.jpa.properties.hibernate.search.default.indexmanager=elasticsearch
+spring.jpa.properties.hibernate.search.default.elasticsearch.host=https://ashraf_revo:ashraf_revo@portal414-7.jazzy-elasticsearch-44.student-65.composedb.com:15914 https://ashraf_revo:ashraf_revo@portal917-2.jazzy-elasticsearch-44.student-65.composedb.com:15914
