--- a/src/main/resources/application-custom.properties
+++ b/src/main/resources/application-custom.properties
@@ -1,3 +1,2 @@
-spring.datasource.url=jdbc:mysql://aws-us-east-1-portal.5.dblayer.com:17184/compose?user=admin&password=DIAPUYCFAGLMCTUF
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://aws-us-east-1-portal.6.dblayer.com:17187/compose?user=admin&password=DKEYPOMDQFOYEPWA
 org.revo.app_env.url=${vcap.application.uris[0]}
