setting data steel

--- a/src/main/resources/application-custom.properties
+++ b/src/main/resources/application-custom.properties
@@ -1,2 +1,4 @@
-spring.datasource.url=jdbc:postgresql://aws-us-east-1-portal.6.dblayer.com:17187/compose?user=admin&password=DKEYPOMDQFOYEPWA
+spring.datasource.url=jdbc:postgresql://aws-us-east-1-portal.26.dblayer.com:17346/compose?user=admin&password=ATTWQMXQRBEQRNTG
 org.revo.app_env.url=${vcap.application.uris[0]}
+spring.jpa.properties.hibernate.search.default.indexmanager=elasticsearch
+spring.jpa.properties.hibernate.search.default.elasticsearch.host=https://ashraf_revo:ashraf_revo@portal414-7.jazzy-elasticsearch-44.student-65.composedb.com:15914 https://ashraf_revo:ashraf_revo@portal917-2.jazzy-elasticsearch-44.student-65.composedb.com:15914
