--- a/src/main/resources/application-pivotal.properties
+++ b/src/main/resources/application-pivotal.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=${cloud.services.MySqlDbmusic.connection.jdbcUrl}
 org.revo.app_env.url=${vcap.application.uris[0]}
+spring.jpa.properties.hibernate.search.default.indexmanager=elasticsearch
+spring.jpa.properties.hibernate.search.default.elasticsearch.host=${cloud.services.Elasticsearchmusic.connection.uri}
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=4
