--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,4 @@ spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 info.application.name=music
+spring.jpa.properties.hibernate.format_sql=true
