--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,8 @@ applications:
   buildpack: java_buildpack
   path: target/music-0.0.1-SNAPSHOT.jar
   services:
-  - NewRelicmusic
+#  - MySqlDbMusic
+#  - ElasticSearchMusic
+  - NewRelicMusic
   env:
     SPRING_PROFILES_ACTIVE: custom
