--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,6 @@ org.revo.app_env.cloudinary.key=553119935255391
 org.revo.app_env.cloudinary.secret=pkKIFJyAhX5xmQWVadko4VaCDi4
 spring.http.multipart.max-request-size=16MB
 spring.http.multipart.max-file-size=15MB
-management.security.roles=ADMIN
 spring.resources.cache-period=53085600
 logging.file=${java.io.tmpdir}${file.separator}log${file.separator}log.text
 spring.datasource.url=jdbc:mysql://localhost:3306/music?user=root&createDatabaseIfNotExist=true
@@ -32,3 +31,7 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 info.application.name=music
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.search.default.elasticsearch.index_schema_management_strategy=VALIDATE
+endpoints.health.sensitive=false
+management.security.enabled=false
+management.health.elasticsearch.enabled=false
