--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFact
 spring.mail.properties.mail.smtp.socketFactory.fallback=false
 info.application.name=music
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.search.default.elasticsearch.index_schema_management_strategy=VALIDATE
+spring.jpa.properties.hibernate.search.default.elasticsearch.index_schema_management_strategy=NONE
 endpoints.health.sensitive=false
 management.security.enabled=false
 management.health.elasticsearch.enabled=false
