setup searchly elasticsearch

--- a/src/main/resources/application-pivotal.properties
+++ b/src/main/resources/application-pivotal.properties
@@ -1,6 +1,4 @@
 spring.datasource.url=${cloud.services.MySqlDbMusic.connection.jdbcUrl}
 org.revo.app_env.url=${vcap.application.uris[0]}
 spring.jpa.properties.hibernate.search.default.indexmanager=elasticsearch
-spring.jpa.properties.hibernate.search.default.elasticsearch.host=${cloud.services.ElasticSearchMusic.connection.uri}
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.maximum-pool-size=4
+spring.jpa.properties.hibernate.search.default.elasticsearch.host=${vcap.services.ElasticSearchMusic.credentials.sslUri}
